--- a/SimRa/Base.lproj/Main.storyboard
+++ b/SimRa/Base.lproj/Main.storyboard
@@ -1087,8 +1087,43 @@ from www.flaticon.com</string>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="YAS-8H-KlE">
+                                        <rect key="frame" x="0.0" y="452" width="320" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="YAS-8H-KlE" id="YCc-Qd-Lf0">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Scary Events" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AbA-66-1FG">
+                                                    <rect key="frame" x="20" y="11.5" width="100" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="Icj-po-gb9"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cRu-Jc-Luh">
+                                                    <rect key="frame" x="128" y="7" width="172" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="30" id="2m8-nU-PBG"/>
+                                                    </constraints>
+                                                    <nil key="textColor"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="cRu-Jc-Luh" firstAttribute="leading" secondItem="AbA-66-1FG" secondAttribute="trailing" constant="8" symbolic="YES" id="46V-D0-BdG"/>
+                                                <constraint firstAttribute="trailing" secondItem="cRu-Jc-Luh" secondAttribute="trailing" constant="20" symbolic="YES" id="BX7-gm-xXO"/>
+                                                <constraint firstItem="AbA-66-1FG" firstAttribute="centerY" secondItem="YCc-Qd-Lf0" secondAttribute="centerY" id="MQU-70-Mv0"/>
+                                                <constraint firstItem="cRu-Jc-Luh" firstAttribute="centerY" secondItem="YCc-Qd-Lf0" secondAttribute="centerY" id="gad-jY-eIj"/>
+                                                <constraint firstItem="AbA-66-1FG" firstAttribute="leading" secondItem="YCc-Qd-Lf0" secondAttribute="leading" constant="20" symbolic="YES" id="xdn-a8-qc1"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="162" id="b7O-Rj-Hc4">
-                                        <rect key="frame" x="0.0" y="452" width="320" height="162"/>
+                                        <rect key="frame" x="0.0" y="496" width="320" height="162"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="b7O-Rj-Hc4" id="cz8-tj-hus">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="161.5"/>
@@ -1132,6 +1167,7 @@ from www.flaticon.com</string>
                         <outlet property="age" destination="yNU-dK-Ne3" id="AQY-PW-O84"/>
                         <outlet property="experience" destination="2eb-l0-HoE" id="N47-K9-Y9K"/>
                         <outlet property="region" destination="BEu-9Y-79g" id="8FD-Q3-SgI"/>
+                        <outlet property="scaryEvents" destination="cRu-Jc-Luh" id="k0v-sC-oX3"/>
                         <outlet property="sex" destination="Xo7-fY-8wU" id="Oha-EK-XSg"/>
                         <outlet property="totalDuration" destination="1vL-kn-Fgp" id="dKH-x2-Czc"/>
                         <outlet property="totalIdle" destination="twH-Xj-Ptb" id="spe-wl-qID"/>
