--- a/SimRa/Base.lproj/Main.storyboard
+++ b/SimRa/Base.lproj/Main.storyboard
@@ -28,9 +28,7 @@
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem systemItem="flexibleSpace" id="zon-bJ-fHC"/>
-                                    <barButtonItem enabled="NO" title="Item" style="plain" id="Py2-VK-zVn">
-                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                    </barButtonItem>
+                                    <barButtonItem enabled="NO" title="Item" style="plain" id="Py2-VK-zVn"/>
                                     <barButtonItem systemItem="flexibleSpace" id="U3d-bw-Zah"/>
                                     <barButtonItem title="Stop" id="dZi-32-hxA">
                                         <connections>
@@ -358,11 +356,12 @@
                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Created my free logo at https://LogoMakr.com" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="FlT-0A-Udk">
                                                     <rect key="frame" x="92" y="20" width="208" height="64"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                     <dataDetectorType key="dataDetectorTypes" link="YES"/>
                                                 </textView>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SimraSquare" translatesAutoresizingMaskIntoConstraints="NO" id="YhP-Kz-C4g">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Simra" translatesAutoresizingMaskIntoConstraints="NO" id="YhP-Kz-C4g">
                                                     <rect key="frame" x="20" y="20" width="64" height="64"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="64" id="5re-V3-jXR"/>
@@ -393,6 +392,7 @@
                                                     <string key="text">Icons made by
 Freepik www.freepik.com
 from www.flaticon.com</string>
+                                                    <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                     <dataDetectorType key="dataDetectorTypes" link="YES"/>
@@ -433,7 +433,7 @@ from www.flaticon.com</string>
                                             <subviews>
                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="TTRangeSlider ByTom Thorpe is provided under the MIT license https://cocoapods.org/pods/TTRangeSlider" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="vbZ-lE-wRt">
                                                     <rect key="frame" x="20" y="20" width="280" height="79"/>
-                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                     <dataDetectorType key="dataDetectorTypes" link="YES"/>
@@ -2124,7 +2124,7 @@ from www.flaticon.com</string>
         </scene>
     </scenes>
     <resources>
-        <image name="SimraSquare" width="266" height="266"/>
+        <image name="Simra" width="300" height="186"/>
         <image name="racing-flag" width="48" height="48"/>
         <image name="start" width="48" height="48"/>
     </resources>
